; ModuleID = '/home/carl/AnghaBench/FFmpeg/tools/extr_sidxindex.c_write_time.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tools/extr_sidxindex.c_write_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_TIME_BASE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"PT\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%dH\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"%dM\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"%d.%0*dS\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @write_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_time(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @AV_TIME_BASE, align 4
  %15 = sdiv i32 %13, %14
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @AV_TIME_BASE, align 4
  %18 = srem i32 %16, %17
  store i32 %18, i32* %10, align 4
  %19 = load i32, i32* %9, align 4
  %20 = sdiv i32 %19, 60
  store i32 %20, i32* %11, align 4
  %21 = load i32, i32* %11, align 4
  %22 = sdiv i32 %21, 60
  store i32 %22, i32* %12, align 4
  %23 = load i32, i32* %10, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @pow(i32 10, i32 %24)
  %26 = load i32, i32* @AV_TIME_BASE, align 4
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @av_rescale_rnd(i32 %23, i32 %25, i32 %26, i32 %27)
  store i32 %28, i32* %10, align 4
  %29 = load i32, i32* %9, align 4
  %30 = srem i32 %29, 60
  store i32 %30, i32* %9, align 4
  %31 = load i32, i32* %11, align 4
  %32 = srem i32 %31, 60
  store i32 %32, i32* %11, align 4
  %33 = load i32*, i32** %5, align 8
  %34 = call i32 (i32*, i8*, ...) @fprintf(i32* %33, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %35 = load i32, i32* %12, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %4
  %38 = load i32*, i32** %5, align 8
  %39 = load i32, i32* %12, align 4
  %40 = call i32 (i32*, i8*, ...) @fprintf(i32* %38, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %39)
  br label %41

41:                                               ; preds = %37, %4
  %42 = load i32, i32* %12, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %47, label %44

44:                                               ; preds = %41
  %45 = load i32, i32* %11, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %51

47:                                               ; preds = %44, %41
  %48 = load i32*, i32** %5, align 8
  %49 = load i32, i32* %11, align 4
  %50 = call i32 (i32*, i8*, ...) @fprintf(i32* %48, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %49)
  br label %51

51:                                               ; preds = %47, %44
  %52 = load i32*, i32** %5, align 8
  %53 = load i32, i32* %9, align 4
  %54 = load i32, i32* %7, align 4
  %55 = load i32, i32* %10, align 4
  %56 = call i32 (i32*, i8*, ...) @fprintf(i32* %52, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32 %53, i32 %54, i32 %55)
  ret void
}

declare dso_local i32 @av_rescale_rnd(i32, i32, i32, i32) #1

declare dso_local i32 @pow(i32, i32) #1

declare dso_local i32 @fprintf(i32*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
